tests/snapshots/surface_snapshots__help-rename.snap
---
source: tests/surface_snapshots.rs
expression: "help(&[verb])"
---
Retitle a note, every spoke `project` that names a renamed project, and every body link that names it

Usage: mnemex rename [OPTIONS] <NOTE> <TITLE>

Arguments:
  <NOTE>   The note's id
  <TITLE>  The new title

Options:
      --dry-run  Report what would change without writing it
  -h, --help     Print help
