tests/snapshots/surface_snapshots__help-schema.snap
---
source: tests/surface_snapshots.rs
expression: "help(&[verb])"
---
Print the schema. This is the schema

Usage: mnemex schema [OPTIONS]

Options:
      --json  Emit the versioned envelope
  -h, --help  Print help
